Fixing bug where chart remained visible below the table after clicking chart to close

--- a/css/main.css
+++ b/css/main.css
@@ -83,9 +83,9 @@ body.show-chart{overflow: hidden;}
 .footerLinks{padding: 10px 0;text-align: center;}
 .footerLinks button.main-submit{width: 94%;border: 1px solid #000;border-radius: 14px;font-size: 40px;line-height: 60px;}
 
-#chartContainer{top: 0;left: 0;width: 100%;height: 100%;background: #fff;}
-body.show-chart #chartContainer{position: fixed;overflow: hidden;}
-#weightsChart{width: 100%;height: 100%;}
+#chartContainer{top: 0;left: 0;width: 100%;height: 100%;display: none;background: #fff;}
+body.show-chart #chartContainer{position: fixed;overflow: hidden;display: block;}
+
 
 /* ==========================================================================
    Helper classes
